apps/java-ssp-11/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-ssp-11
  namespace: dev
  labels:
    app: java-ssp-11
    backstage.io/kubernetes-id: java-ssp-11
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-ssp-11
  template:
    metadata:
      labels:
        app: java-ssp-11
        backstage.io/kubernetes-id: java-ssp-11
        environment: dev
    spec:
      containers:
        - name: java-ssp-11
          image: jaykumark7/java-ssp-11:1.0.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
