apps/java-ssp-11/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-ssp-11
  namespace: dev
  labels:
    backstage.io/kubernetes-id: java-ssp-11
spec:
  selector:
    app: java-ssp-11
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
